--- a/Pretty.css
+++ b/Pretty.css
@@ -5,46 +5,39 @@ h1 {
     color: #EDE9D5;
     text-align: right;
 }
-.border1 {
-    width: 300px;
+.box1 {
+    width: 200px;
     border: 15px solid #E7AB9A;
-    padding: 200px;
-    margin: 20px 20px 20px 20px;
+    padding: 100px;
+    flex-direction: row;
+    margin: 20px;
     background-color: #E7AB9A;
     display: inline-table;
     place-content: right;
-}
+  }
+
 h2 {
     font-style: bold;
     text-align: right;
-    padding: 1.5rem clamp(1rem, 5%, 3rem);
-
 }
-.border2 {
+.box2 {
+    width: 150px;
+    border: 15px solid #DF7857;
+    padding: 50px;
+    flex-direction: row;
+    margin: 20px;
     background-color: #DF7857;
-    border: 15px solid #617143;
-    --min: 15ch;
-    --gap: 1rem;
-    display: grid;
-    grid-gap: var(--gap);
-    /* min() with 100% prevents overflow
-    in extra narrow spaces */
-    grid-template-columns: repeat(auto-fit, minmax(min(100%, var(--min)), 1fr));
+    display: inline-table;
+    place-content: right;
 
 }
-h3 {
-    font-size:
-}
-.border3 {
-    background-color: #EDE9D5
-    ;
-}
-body {
-    background-color: #6EDE9D5;
-}
-.links {
-    font-style: italic;
-}
-.button1 {
-    background-color: #617143;
+.box3 {
+    width: 150px;
+    border: 15px solid #EDE9D5;
+    padding: 100px;
+    flex-direction: row;
+    margin: 20px;
+    background-color: #EDE9D5;
+    display: inline-table;
+    place-content: right;
 }
